@@ -1,3 +1,8 @@
+2008-01-17  Neal H. Walfield  <neal@gnu.org>
+
+	* object.c (folio_object_alloc): If a thread is waiting for an
+	event other than THREAD_WAIT_DESTROY, return EFAULT.
+
 2008-01-16  Neal H. Walfield  <neal@gnu.org>
 
 	* thread.h (THREAD_WAIT_FUTEX): New define.
